fix connect spacing

--- a/src/scss/_purpose.scss
+++ b/src/scss/_purpose.scss
@@ -32,7 +32,7 @@
     }
 
     @media #{$medium-up} {
-      margin-bottom: rem-calc(50px);
+      margin-bottom: rem-calc(25px);
 
       aside {
         @include grid-column($columns:3);
